fix: align shadow section: Our Character

--- a/src/page/Home/OurCharacter/index.scss
+++ b/src/page/Home/OurCharacter/index.scss
@@ -116,7 +116,7 @@
       transform: translateY(30%);
     }
     .vector {
-        top: -30%;
+        top: -10%;
         left: 5%;
         width: 90%;
         mix-blend-mode: color-dodge;
